--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,12 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.TransactionWebViewActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.AddPointActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ListBookFilterActivity"
             android:exported="false" />
         <activity
