--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,7 +51,6 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'jp.wasabeef:glide-transformations:4.0.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
@@ -60,5 +59,5 @@ dependencies {
 
     implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.android.gms:play-services-auth:20.5.0'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 }
