--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -65,9 +65,11 @@
             android:exported="false" />
         <activity
             android:name=".activity.ViewReCommentActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
         <activity
             android:name=".activity.ViewCommentActivity"
+            android:windowSoftInputMode="adjustPan"
             android:exported="false" />
 
         <service
