TuanLA_20231107_Add_Update_Check_Plagiarism

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         android:windowFullscreen="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ManageWarningActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.UpdateBookInfoActivity"
             android:exported="false" />
         <activity
