TuanLA_20231123_Add_Activity_Warning_Detail_And_Manage_User_Admin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         android:windowFullscreen="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.WarningDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ManageUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.ManageWarningActivity"
             android:exported="false" />
         <activity
