TuanLA_20231125_Add_Report_Detail_Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,12 @@
         android:windowFullscreen="true"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ReportDetailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activity.ManageReportActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.SettingBannedWordActivity"
             android:exported="false" />
         <activity
